# elastic-contributor-copilot

./: .env.example  .gitignore  LICENSE  README.md  SUBMISSION.md  main.py  pyproject.toml  requirements.txt  walkthrough.md
agents/: __init__.py  agent1_context_retriever.py  agent2_architecture_critic.py  agent3_impact_quantifier.py  agent4_conflict_resolver.py
backend/: main.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/how-it-works/: page.tsx
frontend/src/app/impact/: page.tsx
frontend/src/app/knowledge/: page.tsx
frontend/src/components/: AppShell.tsx  ImpactMetrics.tsx  LightRays.tsx  LiveActivityFeed.tsx  MetricsCards.tsx  PipelineFlow.tsx  RepoChat.tsx  RunPanel.tsx  SearchDemo.tsx  TextType.tsx
indexing/: __init__.py  chunker.py  crawler.py  incremental_sync.py  live_indexer.py  nightly_reconcile.py  sync_manager.py
pipeline/: __init__.py  conflict_detector.py  contributor_checker.py  orchestrator.py
scripts/: __init__.py  check_activity.py  check_comments.py  check_pr_comments.py  cleanup_comments.py  create_index.py  metrics_collector.py  preflight_check.py  seed_benchmarks.py  seed_resolutions.py  seed_standards.py
tests/: run_scenarios.py  seed_test_data.py  seeded_data.json  test_agent1.py  test_day6.py
tests/tests/: seeded_data.json
tools/: __init__.py  benchmark_queries.py  codeowners.py  diff_parser.py  doc_linker.py  search.py  welcome_composer.py
workflows/: welcome_bot_workflow.json
(+8 files in other folders)
