[project]
name = "elastic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=9.3.0",
    "fastapi>=0.132.0",
    "flask>=3.1.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]
